# xmake-python

./: .gitignore  .pre-commit-config.yaml  README.md  main.c  pyproject.toml  shell.nix  xmake.lua
.github/workflows/: main.yml
src/xmake_python/: __init__.py  __main__.py  _file_processor.py  _logging.py  common.py  config.py  format.py  make.py  program_search.py  sdist.py  versionno.py  wheel.py  xmake.py
src/xmake_python/builder/: builder.py  get_requires.py
src/xmake_python/templates/: Makefile  xmake.lua
test/project/example/: README.md  c.py  pyproject.toml  xmake.lua
tests/: test_wheel_tag.py
tests/examples/autotools/: .gitignore
tests/examples/autotools/program/: Makefile.am  README.md  configure.ac  pyproject.toml  variables.mak
tests/examples/cython/: README.md  xmake.lua
tests/examples/make/cython/: Makefile  pyproject.toml
tests/examples/make/cython/src/: xmake.lua
tests/examples/make/our-first-project/: Makefile  our_first_module.c  py.mak
tests/examples/make/program/: .gitignore  Makefile  main.c  main.py
tests/examples/make/pybind/: Makefile  pyproject.toml
tests/examples/our-first-project/: xmake.lua
tests/examples/program/: main.h
tests/examples/pybind/: xmake.lua
tests/examples/python/: README.md  pyproject.toml  xmake.lua
tests/examples/xmake/cython/: xmake.lua
tests/examples/xmake/our-first-project/: README.md  pyproject.toml  xmake.lua
tests/examples/xmake/program/: main.c  main.h.in  xmake.lua
tests/examples/xmake/pybind/: README.md  xmake.lua
tests/project/example/: README.md  pyproject.toml
