bin_PROGRAMS = main
main_SOURCES = main.c
bin_SCRIPTS = main.py

include_HEADERS = main.h

# or
# docdir = $(prefix)/share/doc
docdir = $(datadir)/doc
doc_DATA = README.md

PYTHON = python
pythondir = $(prefix)/../platlib
python_PYTHON = example.py

metadatadir = $(prefix)/../metadata
metadata_DATA = pyproject.toml
