#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([program],
        [0.0.1],
        [https://github.com/xmake-io/xmake-python/issues],
        [program-0.0.1],
        [https://github.com/xmake-io/xmake-python]
        )
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([main.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign])
AH_TOP([#ifndef MAIN_H])
AH_TOP([#define MAIN_H 1])
AH_BOTTOM([#endif])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
